# talentick

./: LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  requirements.txt  seed.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: config.py  exceptions.py  rate_limit.py  security.py  storage.py
backend/app/models/: __init__.py  announcement.py  base.py  content.py  document.py  onboarding.py  organization.py  points.py  quiz.py  reward.py  ticket.py  user.py
backend/app/routers/: announcements.py  auth.py  content.py  dashboard.py  departments.py  documents.py  me.py  onboarding.py  organizations.py  points.py  positions.py  quizzes.py  redemptions.py  reports.py  rewards.py  tickets.py  users.py
backend/app/schemas/: announcement.py  auth.py  content.py  dashboard.py  department.py  document.py  me.py  onboarding.py  organization.py  points.py  position.py  progress.py  quiz.py  reports.py  reward.py  ticket.py  user.py
backend/app/services/: announcement_service.py  audit_service.py  auth_service.py  content_service.py  dashboard_service.py  department_service.py  document_service.py  onboarding_service.py  org_service.py  points_service.py  position_service.py  progress_service.py  quiz_service.py  redemption_service.py  report_service.py  reward_service.py  rule_engine.py  ticket_service.py  user_excel_service.py  user_service.py  wallet_service.py
backend/migrations/: 27283e91d2f8_sync_database_with_current_models.py  env.py
backend/migrations/versions/: 27283e91d2f8_sync_database_with_current_models.py  5d427d3827dd_initial_schema.py  902e98d3b8e4_users_email_unique.py  a1b2c3d4e5f6_content_targets.py  a4d7e2f9b6c1_ticketing.py  b7c3e1f4a2d8_gamification_points.py  b8c2f4a1e6d3_document_library.py  c4b8f2a6d9e1_fix_progress_tracking_schema_drift.py  c8f2a5d9e3b7_points_override_policy.py  c9d3e5f7a1b4_announcements.py  caba809a078c_merge_content_items_quiz_fk.py  d1e5a7c3b9f2_content_items_quiz_fk.py  (+4 more)
backend/tests/: conftest.py  test_auth.py  test_content.py
frontend/: change-password.html  index.html  login.html  super-admin.html
frontend/admin/: index.html
frontend/content/: detail.html  list.html
frontend/onboarding/: detail.html  index.html
frontend/organization/: index.html
frontend/points/: index.html
frontend/quiz/: index.html
frontend/tickets/: index.html
nginx/: nginx.conf
(+39 files in other folders)
