[project]
name = "talentick"
version = "0.1.0"
description = ""
authors = [
    {name = "arezooghiami",email = "ghiamiarezoo@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.138.1,<0.139.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "email-validator (>=2.3.0,<3.0.0)",
    "greenlet (>=3.5.3,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "psycopg (>=3.3.4,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
httpx = "^0.28.1"

